--- a/config.org
+++ b/config.org
@@ -67,22 +67,22 @@
 
 * Rationale
 
-During my undergraduate years, I remember having trouble setting up a postfix server for a
-practical exercise in one of my classes. I had to edit the default configuration
-file to harden the security of the system. My server was wrongly configured and
-I couldn't figure out what part of my edits I had messed up. We had to do all
-the changes to configuration file through a tty in an FreeBDS virtual machine,
-so I was forced to use a terminal editor. =nano= was my choice since it was
-similar to the other GUI editors I had used at the time. After much frustration,
-I asked a professor of mine to please help me out. He took over my seat, closed
-my =nano= session and reopened the conf file with a different editor. He was
-pressing all sorts of keys on the keyboard at an amazing speed, the cursor was
-flying all over the screen and I was simply at awe.
+During my undergraduate years, I remember having trouble setting up a postfix
+server for a practical exercise in one of my classes. I had to edit the default
+configuration file to harden the security of the system. My server was wrongly
+configured and I couldn't figure out what part of my edits I had messed up. We
+had to do all the changes to configuration file through a tty in an FreeBDS
+virtual machine, so I was forced to use a terminal editor. =nano= was my choice
+since it was similar to the other GUI editors I had used at the time. After much
+frustration, I asked a professor of mine to please help me out. He took over my
+seat, closed my =nano= session and reopened the conf file with a different editor.
+He was pressing all sorts of keys on the keyboard at an amazing speed, the
+cursor was flying all over the screen and I was simply at awe.
 
 He found what was wrong with my config and fixed it, telling me what he had
 changed. When he left, I tried to look up what command he had run to edit the
-file. This was my first experience with... =vim=.  I was introduced to =emacs= a
-few months later, when I saw a friend of mine taking some notes with it.
+file. This was my first experience with... =vim=.  I was introduced to =emacs= a few
+months later, when I saw a friend of mine taking some notes with it.
 
 In any case, this is the earliest point that I can remember thinking that the
 efficiency of text-editing, just like with any other task, is fully dependent on
@@ -94,12 +94,12 @@ a text editor, instead of just using whatever was popular.
 
 ** ~(message "Hello, %s!" "emacs")~
 
-Having taken that decision, I played around with =vim= and later on with
-=emacs=, finally settling with the former to write the code for my thesis. I
-started out with a vanilla configuration, a single =.emacs= file where I would
-copy and paste elisp from other people's config without much thinking.  It was
-ugly, messy and buggy but It was also very fun. I loved the idea of using code to
-configure the tool that I would use to edit code, so I stuck with it.
+Having taken that decision, I played around with =vim= and later on with =emacs=,
+finally settling with the former to write the code for my thesis. I started out
+with a vanilla configuration, a single =.emacs= file where I would copy and paste
+elisp from other people's config without much thinking.  It was ugly, messy and
+buggy but It was also very fun. I loved the idea of using code to configure the
+tool that I would use to edit code, so I stuck with it.
 
 My knowledge of emacs would come from google searches, blog posts and the online
 GNU Emacs documentation. I still hadn't learned how to ask emacs the things that
@@ -139,23 +139,21 @@ research, time and effort.
 
 _Why work on problems that others have already solved?_ With this in mind, I
 decided to try out =spacemacs=, a community developed emacs distribution full of
-pre-configured packages grouped by =layers=. And for a while, It worked out
-great. The defaults were good, it was functional enough and it could keep up
-with the technologies I was using at work. What was not to love? Well, with
-continuous use the wrinkles started to appear. For one, =spacemacs= was slow. It
-would take a long time to startup and commands were noticeably sluggish. It was
-also pretty buggy.  Sure, the layers for different languages worked reasonably
-well but from time to time emacs would behave in unexpected ways and I would
-have no idea why.
+pre-configured packages grouped by =layers=. And for a while, It worked out great.
+The defaults were good, it was functional enough and it could keep up with the
+technologies I was using at work. What was not to love? Well, with continuous
+use the wrinkles started to appear. For one, =spacemacs= was slow. It would take a
+long time to startup and commands were noticeably sluggish. It was also pretty
+buggy.  Sure, the layers for different languages worked reasonably well but from
+time to time emacs would behave in unexpected ways and I would have no idea why.
 
-Looking into ways of making =spacemacs= faster, I stumbled upon =doom= and
-decided to try it out. I was impressed (and I still am) with its speed, at
-startup and during use, it feels quick and snappy. Installing =doom= modules was
-similar enough to configuring =spacemacs= layers. While =doom= was not
-by any means buggy, I would get frustrated with it's opinionated defaults.
-=doom= would have some keybinding I didn't like or some package had some extra
-behaviour different to what I was used to and I wouldn't know how to change it
-to what I wanted.
+Looking into ways of making =spacemacs= faster, I stumbled upon =doom= and decided
+to try it out. I was impressed (and I still am) with its speed, at startup and
+during use, it feels quick and snappy. Installing =doom= modules was similar
+enough to configuring =spacemacs= layers. While =doom= was not by any means buggy, I
+would get frustrated with it's opinionated defaults.  =doom= would have some
+keybinding I didn't like or some package had some extra behaviour different to
+what I was used to and I wouldn't know how to change it to what I wanted.
 
 ** Back to vanilla.
 
@@ -163,44 +161,44 @@ At this point it was clear to me what was the real problem. My ignorance of the
 inner workings on emacs was my only limiting factor. So I took an extreme
 position, I went back to pure vanilla again, discarding all my previous
 configurations and starting from scratch, while using other editors for my job.
-My objective was to recreate the aspects that I liked from =doom= from scratch
-in my own configuration. Very naive, but I was motivated.
+My objective was to recreate the aspects that I liked from =doom= from scratch in
+my own configuration. Very naive, but I was motivated.
 
 I took it slow, researching Emacs throughly and little by little building my
 configuration, but trying to understand everything that I was chaging. I read
-[[https://www.masteringemacs.org/][Mickey Peterson's Mastering Emacs]], where I finally learned how to ask emacs about the
-things I don't understand. I found the excellent [[http://ergoemacs.org/][Xah's ergoemacs]] blog, an
-awesome reference I keep consulting even now with all sorts of information on
+[[https://www.masteringemacs.org/][Mickey Peterson's Mastering Emacs]], where I finally learned how to ask emacs
+about the things I don't understand. I found the excellent [[http://ergoemacs.org/][Xah's ergoemacs]] blog,
+an awesome reference I keep consulting even now with all sorts of information on
 elisp syntax, emacs concepts and configuration tips and tricks.
 
-I started following members of the awesome emacs community, such as
-[[https://protesilaos.com/dotemacs/][Protesilaos Stavrou]], a long term =vim= user transformed into a hardcore emacs user, whose
+I started following members of the awesome emacs community, such as [[https://protesilaos.com/dotemacs/][Protesilaos
+Stavrou]], a long term =vim= user transformed into a hardcore emacs user, whose
 videos explaining his configuration where a great inspiration for me and taught
 me to favour built-in packages over third party packages and most importantly,
 how to build my own criteria for what packages I should use.
 
 It took at least two months until I made a configuration that I could use at
-work again, but it felt great when I finally managed to have something
-that was reasonably fast, reproducible in any computer running linux and was
-functional enough for my use cases that I had made and I intimately understood!
-Although I am nowhere near a emacs expert, if such a thing exists, and a lot of
-details still escape me. I learned a LOT about not only emacs, but about
-lisp, functional programming and free (as in freedom) extensible software! Going
-back to basics paid of in spades.
+work again, but it felt great when I finally managed to have something that was
+reasonably fast, reproducible in any computer running linux and was functional
+enough for my use cases that I had made and I intimately understood!  Although I
+am nowhere near a emacs expert, if such a thing exists, and a lot of details
+still escape me. I learned a LOT about not only emacs, but about lisp,
+functional programming and free (as in freedom) extensible software! Going back
+to basics paid of in spades.
 
 ** Why DOOM?
 
-I'll ask again, _Why work on problems that others have already solved?_. Well,
-in my case, It was to learn more about the problem-context.  The thing is, emacs
-is truly immense, even if we don't take into account all the third party
-packages written for it. It has it's own lisp dialect for extensibility, a
-=mode= system for defining unique behaviour in each buffer, with =major modes=
-(one per buffer) and =minor modes= (can be multiple or none in a buffer) that
-change the visual elements, available commands and keybindings and it has different
-systems to detect when and which of this modes it should activate at any given
-time. It also has different ways of running system commands synchronously or
-asynchronously and processing their output. It even has a process manager for the
-programs running under emacs!
+I'll ask again, _Why work on problems that others have already solved?_. Well, in
+my case, It was to learn more about the problem-context.  The thing is, emacs is
+truly immense, even if we don't take into account all the third party packages
+written for it. It has it's own lisp dialect for extensibility, a =mode= system
+for defining unique behaviour in each buffer, with =major modes= (one per buffer)
+and =minor modes= (can be multiple or none in a buffer) that change the visual
+elements, available commands and keybindings and it has different systems to
+detect when and which of this modes it should activate at any given time. It
+also has different ways of running system commands synchronously or
+asynchronously and processing their output. It even has a process manager for
+the programs running under emacs!
 
 I'm not even being exaustive. Add to that 40 years of packages and multiple
 emacs releases! This wouldn't be so troublesome if it weren't for the terrible
@@ -224,11 +222,11 @@ keep track of this problems so I could fix them later.
 When I wanted to set up emacs for a new language environments, I would spend a
 lot of time checking out what community packages there were for that especific
 environment, putting =TODO= comments with the projects repository url so I could
-try out and configure it out later on. Quickly It became the case that for every =FIXME=
-or =TODO= comment I would solve, two or three more would appear.
+try out and configure it out later on. Quickly It became the case that for every
+=FIXME= or =TODO= comment I would solve, two or three more would appear.
 
-The =FIXME= were not such a big deal, I like hunting bugs and fixing them, since
-I always feel like I atleast learn something in the process.  The big problems
+The =FIXME= were not such a big deal, I like hunting bugs and fixing them, since I
+always feel like I atleast learn something in the process.  The big problems
 were the =TODO=, which were not remotly as interesting to solve. Looking for
 packages is time consuming and many times I ended up not using what I tried out.
 Other times, the packages I was interested in were so massive I never wanted to
@@ -238,22 +236,22 @@ to. Honorable mentions in this categories are =lsp= and =treemacs=.
 #+HTML: <p align="center"><img src="https://raw.githubusercontent.com/danilevy1212/doom/master/img/too-many-todos.png"/></p>
 #+HTML: <p align="center">Unresolved issues in my vanilla configuration.</p>
 
-So, _Why work on problems that others have already solved?_. Not all problems
-are made equally and some problems are just tedious to solve, this is the
-principal reason why I choose to go back to =doom=. Another reason is that I
-strongly agree with the project guiding principals. =doom= is not and IDE
-replacement or a you get what you see type of editor. It's fully expected of its
-users to customize it and all its functionality is opened to the user so it can
-be tinkered with. No magic, just very well thought out elisp macros and hooks!
+So, _Why work on problems that others have already solved?_. Not all problems are
+made equally and some problems are just tedious to solve, this is the principal
+reason why I choose to go back to =doom=. Another reason is that I strongly agree
+with the project guiding principals. =doom= is not and IDE replacement or a you
+get what you see type of editor. It's fully expected of its users to customize
+it and all its functionality is opened to the user so it can be tinkered with.
+No magic, just very well thought out elisp macros and hooks!
 
-This is perhaps what I like the most about =doom=, its true power resides in
-it's =core= module, where all the macros, functions and hooks used to help the
-user extend emacs resides. The =modules= in =doom= just use those set of tools
-to offer configuration options for specific use cases. This offers a mix of the
-best of both the worlds of vanilla emacs and spacemacs. With =doom= I can try
-out a module, see what I like, bring it over to my configuration, disable
-packages that I don't like and mix them with my own packages in a quick and
-reliable manner, much more so that If I were back in vanilla emacs.
+This is perhaps what I like the most about =doom=, its true power resides in it's
+=core= module, where all the macros, functions and hooks used to help the user
+extend emacs resides. The =modules= in =doom= just use those set of tools to offer
+configuration options for specific use cases. This offers a mix of the best of
+both the worlds of vanilla emacs and spacemacs. With =doom= I can try out a
+module, see what I like, bring it over to my configuration, disable packages
+that I don't like and mix them with my own packages in a quick and reliable
+manner, much more so that If I were back in vanilla emacs.
 
 ** TL;DR:
 
@@ -1355,21 +1353,26 @@ An ~nvm-use-for~ interactive wrapper. If a .nvmrc can't be found in ~default-dir
 #+begin_src elisp
 ;;;###autoload
 (defun dan/nvm-use-for ()
-  "Activate a node version interactively."
+  "Activate a node version interactively.
+
+From `default-directory' upwards, a .nvmrc file will be search to fix the nvm version.
+If none is found, the user will be prompted to select an available version of node."
   (interactive)
   (condition-case err
       (nvm-use-for)
     ('error
-     (pcase (completing-read "Select a Node version:"
-                             (append (nvm--installed-versions)
-                                     (list (format "%s (%s)"
-                                                   "system"
-                                                   (s-trim (with-temp-buffer
-                                                             (call-process-shell-command "/usr/bin/node -v" nil t)
-                                                             (buffer-string)))) ))
-                             nil t)
-       ("system" (dan/nvm-deactivate))
-       (node-version (nvm-use node-version))))))
+     (let* ((node-system-path "/usr/bin/node")
+            (node-system (and (file-exists-p node-system-path)
+                              (list (format "System (%s)"
+                                            (s-trim (with-temp-buffer
+                                                      (call-process-shell-command
+                                                       (concat node-system-path " -v") nil t)
+                                                      (buffer-string)))))))
+            (choice (completing-read "Select a Node version:"
+                                     (append (nvm--installed-versions) node-system) nil t)))
+       (cond
+        ((s-equals-p choice node-system) (dan/nvm-deactivate))
+        (t (nvm-use choice)))))))
 #+end_src
 
 *** Vue
