--- a/config.org
+++ b/config.org
@@ -47,6 +47,7 @@
     - [[#splash-screen][Splash Screen]]
     - [[#rainbow-delimeters][Rainbow Delimeters]]
     - [[#modeline][Modeline]]
+    - [[#projectile][Projectile]]
     - [[#org][Org]]
       - [[#org-edna][org-edna]]
       - [[#autoloads][Autoloads]]
@@ -337,7 +338,7 @@ package I could use, so I rather install it standalone.
        ;;layout            ; auie,ctsrnm is the superior home row
 #+end_src
 
-**** TODO :completion
+**** :completion
 
 ***** Company Mode
 
@@ -394,12 +395,37 @@ the value of a ~company-backends~ for a specific major/minor mode locally in the
 buffer.  Some examples of how to use it can be found in the
 ~set-company-backend!~ documentation.
 
-***** TODO Ivy
+***** Ivy
+
+Another super useful package. Ivy is a completion engine that looks deceptively
+simple. Creating new search types is simple through it's [[https://oremacs.com/swiper/#api][API]] and has a lot
+community packages that extend it. Ivy also comes with it's own Info node where
+it details more of it's functionality.
+
+This module offers a lot unique search commands through the =SPC s= and =SPC f=
+prefixes. If the commands are prefixed with the universal command (=SPC u=),
+their result with include hidden files.
+
+For use evil users, it also offers a nice ex-command:
+
+| ex command           | description                                                    |
+|----------------------+----------------------------------------------------------------|
+| ~:pg[rep][!] [query]~  | search project (if ~!~, include hidden files)                    |
+| ~:pg[rep]d[!] [query]~ | search from current directory (if ~!~, don't search recursively) |
+
+The optional `!` is equivalent to the universal argument for the previous
+commands.
+
+We take icons with the flags:
+
++ +icons :: all-the-icons niceties in the ivy buffer.
++ +fuzzy  :: Search for "close enough" matches.
++ +prescient :: Order candidate by selection frequency.
 
 #+begin_src elisp :tangle init.el
        ;;helm              ; the *other* search engine for love and life
        ;;ido               ; the other *other* search engine...
-       (ivy +icons)        ; a search engine for love and life
+       (ivy +icons +fuzzy +prescient)        ; a search engine for love and life
 #+end_src
 
 **** TODO :ui
@@ -734,7 +760,7 @@ lexical binding.
 ** autoload folder
 
 Autoloads blocks go into different files in the =autoload= folder.  In this
-folder there are several file which define functions that shouldn't be loaded
+folder there are several files which define functions that shouldn't be loaded
 until they're needed and logic that should be autoloaded (evaluated very, very
 early at startup).
 
@@ -875,6 +901,15 @@ Also, the battery indicator is pretty neat:
 (use-package! battery
   :hook
   (doom-modeline-mode . display-battery-mode))
+#+end_src
+
+*** Projectile
+
+Let's make projectile's life easier by giving it some paths where I normally
+store projects.
+
+#+begin_src elisp
+(setq projectile-project-search-path '("~/Projects/" "~/.config/"))
 #+end_src
 
 *** Org
